--- a/Pixela-Manager-Qt_v001.ui
+++ b/Pixela-Manager-Qt_v001.ui
@@ -2,11 +2,14 @@
 <ui version="4.0">
  <class>Form</class>
  <widget class="QWidget" name="Form">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>594</width>
+    <width>600</width>
     <height>804</height>
    </rect>
   </property>
@@ -16,9 +19,15 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>600</width>
+    <height>804</height>
+   </size>
+  </property>
   <property name="maximumSize">
    <size>
-    <width>594</width>
+    <width>600</width>
     <height>804</height>
    </size>
   </property>
@@ -112,6 +121,17 @@ QPushButton {
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>172</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <family>Roboto</family>
+             </font>
+            </property>
             <property name="wrapping">
              <bool>false</bool>
             </property>
@@ -119,7 +139,7 @@ QPushButton {
              <set>Qt::AlignCenter</set>
             </property>
             <property name="buttonSymbols">
-             <enum>QAbstractSpinBox::UpDownArrows</enum>
+             <enum>QAbstractSpinBox::PlusMinus</enum>
             </property>
             <property name="dateTime">
              <datetime>
@@ -128,14 +148,47 @@ QPushButton {
               <second>0</second>
               <year>2023</year>
               <month>11</month>
-              <day>16</day>
+              <day>20</day>
              </datetime>
             </property>
+            <property name="maximumDateTime">
+             <datetime>
+              <hour>23</hour>
+              <minute>59</minute>
+              <second>59</second>
+              <year>2051</year>
+              <month>1</month>
+              <day>1</day>
+             </datetime>
+            </property>
+            <property name="minimumDateTime">
+             <datetime>
+              <hour>0</hour>
+              <minute>0</minute>
+              <second>0</second>
+              <year>1996</year>
+              <month>1</month>
+              <day>1</day>
+             </datetime>
+            </property>
+            <property name="currentSection">
+             <enum>QDateTimeEdit::YearSection</enum>
+            </property>
             <property name="displayFormat">
-             <string>dd/MM/yyyy</string>
+             <string>yyyy/MM/dd</string>
             </property>
             <property name="calendarPopup">
              <bool>true</bool>
+            </property>
+            <property name="timeSpec">
+             <enum>Qt::UTC</enum>
+            </property>
+            <property name="date">
+             <date>
+              <year>2023</year>
+              <month>11</month>
+              <day>20</day>
+             </date>
             </property>
            </widget>
           </item>
@@ -157,7 +210,14 @@ QPushButton {
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="pixel_units_input"/>
+           <widget class="QLineEdit" name="pixel_units_input">
+            <property name="toolTip">
+             <string>Number depending on the unit name you selected.</string>
+            </property>
+            <property name="placeholderText">
+             <string>25</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -209,6 +269,12 @@ QPushButton {
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>26</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
@@ -254,12 +320,37 @@ QPushButton:pressed {
      </layout>
     </item>
     <item>
+     <widget class="QProgressBar" name="progress_bar">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="value">
+       <number>24</number>
+      </property>
+      <property name="textVisible">
+       <bool>false</bool>
+      </property>
+      <property name="invertedAppearance">
+       <bool>false</bool>
+      </property>
+      <property name="format">
+       <string>%p%</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QLabel" name="pixel_details_label">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto</family>
+        <pointsize>11</pointsize>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(249, 249, 249);</string>
@@ -462,8 +553,11 @@ QPushButton:pressed {
         </item>
         <item>
          <widget class="QLineEdit" name="graph_name_input">
+          <property name="toolTip">
+           <string/>
+          </property>
           <property name="placeholderText">
-           <string>e.g Reading</string>
+           <string>e.g Reading, Running</string>
           </property>
          </widget>
         </item>
@@ -486,13 +580,20 @@ QPushButton:pressed {
         </item>
         <item>
          <widget class="QLineEdit" name="unit_name_input">
+          <property name="toolTip">
+           <string/>
+          </property>
           <property name="placeholderText">
-           <string>e.g Pages</string>
+           <string>e.g Pages, Minutes</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QComboBox" name="unit_type_menu">
+          <property name="toolTip">
+           <string>Integer = 1, 2, 3
+Decimal: 1.25, 2.34, 3.99</string>
+          </property>
           <property name="editable">
            <bool>false</bool>
           </property>
@@ -500,19 +601,19 @@ QPushButton:pressed {
            <string>Integer</string>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <property name="placeholderText">
            <string/>
           </property>
           <item>
            <property name="text">
-            <string>Decimal</string>
+            <string>Integer</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>Integer</string>
+            <string>Decimal</string>
            </property>
           </item>
          </widget>
@@ -704,7 +805,7 @@ QPushButton:pressed {
      <x>20</x>
      <y>210</y>
      <width>561</width>
-     <height>183</height>
+     <height>187</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="manage_graph_layout">
@@ -779,6 +880,12 @@ QPushButton:pressed {
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>26</height>
+         </size>
         </property>
         <property name="maximumSize">
          <size>
