--- a/ui_files/Pixela-Manager-Qt_v001.ui
+++ b/ui_files/Pixela-Manager-Qt_v001.ui
@@ -31,8 +31,17 @@
     <height>804</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <family>Roboto</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Pixela Manager</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../icons/icon.png</normaloff>../icons/icon.png</iconset>
   </property>
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
@@ -97,7 +106,7 @@ QPushButton {
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="2,1,2">
+       <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="2,1,0">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
@@ -158,7 +167,7 @@ QPushButton {
               <second>59</second>
               <year>2051</year>
               <month>1</month>
-              <day>1</day>
+              <day>4</day>
              </datetime>
             </property>
             <property name="minimumDateTime">
@@ -222,17 +231,63 @@ QPushButton {
          </layout>
         </item>
         <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+         <widget class="QPushButton" name="delete_pixel_button">
+          <property name="enabled">
+           <bool>true</bool>
           </property>
-          <property name="sizeHint" stdset="0">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
            <size>
             <width>148</width>
-            <height>20</height>
+            <height>26</height>
            </size>
           </property>
-         </spacer>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>26</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <family>Roboto</family>
+            <pointsize>12</pointsize>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">QPushButton {
+	color: rgb(255, 255, 255);
+	background-color: rgb(212, 34, 34);
+}
+QPushButton:hover {
+	background-color: rgb(185, 30, 30);
+}
+QPushButton:pressed {
+	background-color: rgb(230, 37, 37);
+}</string>
+          </property>
+          <property name="text">
+           <string>Delete Pixel</string>
+          </property>
+          <property name="autoExclusive">
+           <bool>false</bool>
+          </property>
+          <property name="flat">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -398,7 +453,7 @@ QPushButton:pressed {
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap>logo.png</pixmap>
+         <pixmap>../icons/logo.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -451,10 +506,16 @@ QPushButton:pressed {
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>26</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>25</height>
+        <height>26</height>
        </size>
       </property>
       <property name="font">
@@ -939,9 +1000,15 @@ QPushButton:pressed {
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>557</width>
+        <height>111</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
-        <width>571</width>
+        <width>557</width>
         <height>111</height>
        </size>
       </property>
@@ -953,6 +1020,9 @@ QPushButton:pressed {
       </property>
       <property name="scaledContents">
        <bool>true</bool>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
